Fix sonars in policy-distribution
Fixed:
- use "var" instead of actual type

Issue-ID: POLICY-3285
Change-Id: I0dba2f96870722b4071ac0085287bc91a27dde88
Signed-off-by: Jim Hahn <jrh3@att.com>